# src/controllers/auth.controller.ts
@@ -1,7 +1,7 @@
 import { Request, Response } from "express";
 import { userService } from "../services/user.service";
 import { generateToken } from "../utils/jwt.util";
-import { UnauthorizedError, ConflictError } from "../utils/errors/AppError";
+import { UnauthorizedError } from "../utils/errors/AppError";
 import { asyncHandler } from "../utils/async-handler";
 
 export const login = asyncHandler(async (req: Request, res: Response) => {
@@ -21,20 +21,5 @@ export const login = asyncHandler(async (req: Request, res: Response) => {
   return res.json({
     success: true,
     data: { token: token, user: user },
-  });
-});
-
-export const register = asyncHandler(async (req: Request, res: Response) => {
-  const { email, password, name } = req.body;
-
-  const findUser = await userService.findByEmail(email);
-  if (findUser) {
-    throw new ConflictError("Email already exists");
-  }
-
-  const user = await userService.create({ email, password, name });
-  return res.status(201).json({
-    success: true,
-    data: { user: user },
   });
 });
