# src/routes/api.ts
@@ -1,10 +1,15 @@
 import { Router } from "express";
-import * as productController from "../controllers/product.controller";
-import { validate } from "../middlewares/validate.middleware";
-import { createProductSchema } from "../schemas/product.schema";
-import * as authController from "../controllers/auth.controller";
-import { roleMiddleware } from "../middlewares/role.middleware";
+
 import { authMiddleware } from "../middlewares/auth.middleware";
+import { roleMiddleware } from "../middlewares/role.middleware";
+import { validate } from "../middlewares/validate.middleware";
+
+import { createUserSchema } from "../schemas/user.schema";
+import { createProductSchema } from "../schemas/product.schema";
+
+import * as authController from "../controllers/auth.controller";
+import * as userController from "../controllers/user.controller";
+import * as productController from "../controllers/product.controller";
 
 const router = Router();
 const protectedRouter = Router();
@@ -15,7 +20,7 @@ protectedRouter.use(authMiddleware);
 
 router.post("/auth/login", authController.login);
 
-adminRouter.post("/auth/register", authController.register);
+adminRouter.post("/users", validate(createUserSchema as any), userController.store);
 
 protectedRouter.get("/products", productController.index);
 protectedRouter.get("/products/:id", productController.show);
@@ -23,7 +28,7 @@ protectedRouter.post("/products", validate(createProductSchema as any), productC
 protectedRouter.put("/products/:id", validate(createProductSchema as any), productController.update);
 protectedRouter.delete("/products/:id", productController.destroy);
 
-router.use(adminRouter);
+router.use("/admin", adminRouter);
 router.use(protectedRouter);
 
 export default router;
